MAJOR: upgrade all internal dependencies. Upgrade from previous version is NOT supported.
bump library depenencies to their latest:
cas to 3.11.4
ES 6.6.2 !!!
kafka 2.1.1
zookeeper 3.4.13
AdoptOpenJDK instead of Oracle one
bump all library versions to latest besides Play